Mobile Update 1.1 Fixed Section Alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -36,13 +36,13 @@
     }
 	#left, #right {
 		top: 0; bottom: 0;
-		width: 60px;
+		width: 50px;
 		}
 		#left { left: 0; }
 		#right { right: 0; }	
 	#top, #bottom {
 		left: 0; right: 0;
-		height: 60px;
+		height: 50px;
 		}
 		#top { top: 0; }
         #bottom { bottom: 0; }
@@ -50,8 +50,8 @@
 
 #square {
     position: fixed;
-    right: 60px;
-    top: 60px;
+    right: 50px;
+    top: 50px;
     height: 80px;
     width: 80px;
     z-index: 2;
@@ -73,8 +73,9 @@ html, body {
     text-align: center;
 }
 
+
 header .navbar {
-    margin-top: 0rem;
+    padding: 0rem 0.45rem;
 }
 
 header li{
@@ -106,11 +107,11 @@ header .navbar-nav:last-child {
 header .nav-item{
     padding: 5px;
     font-weight: 500;
-    margin-bottom: 0.4rem;
+    margin-bottom: 0.75rem;
 }
 
 header .navbar-brand{
-    margin-left: 1.9rem;
+    margin-left: 1.75rem;
 }
 
 #top-menu li.active #about, header .about:hover{
@@ -297,14 +298,14 @@ section .title-line {
 }
 
 #WORK .modal-body {
-    background-image: linear-gradient(0deg, rgba(22, 22, 22, 0.9), rgba(22, 22, 22, 0.9)), url('SplashBackground.png');
-    background-repeat: no-repeat, no-repeat;
+    background-image: linear-gradient(0deg, rgba(27, 27, 27, 0.875), rgba(27, 27, 27, 0.875)), url('SplashBackgroundInverted.png');
+    background-repeat: repeat, repeat;
     background-position: center, right top;
-	background-attachment: fixed, fixed;
-    background-size: cover ,cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background-attachment: scroll, scroll;
+    background-size: auto, auto;
+    -webkit-background-size: auto, auto;
+    -moz-background-size: auto, auto;
+    -o-background-size: auto, auto;
     letter-spacing: 1px;
     font-weight: 500;
     font-size: 22px;
@@ -451,7 +452,7 @@ footer {
         }	
         #navtop{
             left: 0px; right: 0px;
-            height: 70px;
+            height: 67px;
             }
             #navtop { top: 0; }
 
@@ -460,7 +461,7 @@ footer {
     right: 0px;
     left: 0px;
     top: 0px;
-    height: 72.5px;
+    height: 69.5px;
     width: 100vw;
     z-index: 1;
     -webkit-transition: all 0.5s ease;
@@ -571,6 +572,16 @@ footer {
         background-color: rgba(35, 35, 35, 0.75);
     }
 
+    #ABOUT .title-bg{
+        background: linear-gradient(0deg, rgba(30, 30, 30, 1), rgba(24, 125, 233, 0.75));
+        position: absolute;
+        height: 150px;
+        width: 150px;
+        left: 101px;
+        border-radius: 50%;
+    }
+    
+
     #ABOUT img {
         margin-top: -30px;
         width: 150px;
@@ -595,7 +606,7 @@ footer {
     }
 
     #WORK .card {
-       margin-top: 20px !important;
+       margin-top: 0px !important;
        margin-bottom: 20px !important;
     }
 
@@ -699,7 +710,7 @@ footer {
         }	
         #navtop{
             left: 0px; right: 0px;
-            height: 70px;
+            height: 67px;
             }
             #navtop { top: 0; }
 
@@ -708,7 +719,7 @@ footer {
     right: 0px;
     left: 0px;
     top: 0px;
-    height: 72.5px;
+    height: 69.5px;
     width: 100vw;
     z-index: 1;
     -webkit-transition: all 0.5s ease;
@@ -821,6 +832,15 @@ footer {
 
     #HOME .btn-orange {
         font-size: 22px;
+    }
+
+    #ABOUT .title-bg{
+        background: linear-gradient(0deg, rgba(30, 30, 30, 1), rgba(24, 125, 233, 0.75));
+        position: absolute;
+        height: 150px;
+        width: 150px;
+        left: 195px;
+        border-radius: 50%;
     }
 
     #ABOUT img {
@@ -1073,6 +1093,15 @@ footer {
 
     #HOME .btn-orange {
         font-size: 28px;
+    }
+
+    #ABOUT .title-bg{
+        background: linear-gradient(0deg, rgba(30, 30, 30, 1), rgba(24, 125, 233, 0.75));
+        position: absolute;
+        height: 200px;
+        width: 200px;
+        left: 260px;
+        border-radius: 50%;
     }
 
     #ABOUT img {
@@ -1389,8 +1418,8 @@ footer {
     }
 
     header .navbar-brand img{
-        width: 105px; 
-        height: 70px;
+        width: 95px; 
+        height: 60px;
     }
 
     header .navbar {
@@ -1404,8 +1433,8 @@ footer {
     header .nav-item{
         padding: 5px;
         font-weight: 500;
-        font-size: 0.9rem;
-        margin-bottom: 1rem;
+        font-size: 0.8rem;
+        margin-bottom: 0.75rem;
     }
 
     header .navbar-brand{
@@ -1483,6 +1512,11 @@ footer {
         width: 100%;
         height: 50vh;
         object-fit: cover;
+    }
+
+    
+    #WORK .card-deck {
+        width: 70% !important;
     }
 
     #WORK .modal-body h2 {
